@@ -437,9 +437,6 @@ struct proc_keyword_s proc_table[] = {
 #define LCN_GOTO_WRS            "GOTO "
 #define LCN_GOTO_WS             " GOTO "
 #define LCN_ELSE                "ELSE"
-#define LCN_UICS_WRS            "UICS "
-#define LCN_CHARS               "CHARS"
-#define LCN_PIXELS              "PIXELS"
 #define LCN_BASE_WRS            "BASE "
 #define LCN_PCRE_CASELESS       "MATCH PCRE CASELESS"
 #define LCN_PCRE                "MATCH PCRE"
