@@ -49,7 +49,6 @@ void init() {
   opt_ide = 0;
   opt_modlist[0] = '\0';
   opt_nosave = 1;
-  opt_pref_bpp = 0;
   opt_pref_height = 0;
   opt_pref_width = 0;
   opt_quiet = 1;
@@ -73,7 +72,7 @@ void show_help() {
             OPTIONS[i].val, OPTIONS[i].name);
     i++;
   }
-  fprintf(stdout, "\nhttp://smallbasic.sourceforge.net\n\n");
+  fprintf(stdout, "\nhttps://smallbasic.sourceforge.io\n\n");
 }
 
 void log(const char *format, ...) {
